2000-10-16  OKUJI Yoshinori  <okuji@gnu.org>

	From Roderich Schupp:
	* lib/device.c: Include <limits.h>.
	[__linux__] (have_devfs): New function.
	(get_floppy_disk_name) [__linux__]: If devfs is supported, use
	the name "/dev/floppy/N" instead.
	(init_device_map) [__linux__]: If devfs is supported, use
	"/dev/discs/discN" instead.
	[__linux__] (write_to_partition): Change the size of DEV to
	PATH_MAX instead of 64.
	If devfs is supported, replace "/disc" in the device name with
	"/part".
	
2000-10-15  OKUJI Yoshinori  <okuji@gnu.org>

	From Roderich Schupp <rsch@ExperTeam.de>:
	* util/grub-install.in (convert): Added support for "native"
	devfs device names.
	
2000-10-14  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (Serial terminal): Fixed a typo.
	* docs/user-ref.texi (GRUB images): New chapter.
	* docs/grub.texi: Added an entry for the chapter "GRUB images".
	
2000-10-14  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (setkey_func): If TO_KEY is NULL (i.e. the
	user specifies no argument), clear BIOS_KEY_MAP and
	ASCII_KEY_MAP.
	If TO_KEY is non-NULL but FROM_KEY is NULL, set ERRNUM to
	ERR_BAD_ARGUMENT and return one.
	
2000-10-13  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/grub.texi: Added an entry for the new chapter "Security",
	and the order of the chapters in the Tutorial Manual was
	changed.
	* docs/tutorial.texi (Configuration): Moved to right after the
	chapter "Booting".
	(Security): New chapter.
	
2000-10-10  OKUJI Yoshinori  <okuji@gnu.org>

	From Alessandro Rubini:
	* util/grub-install.in (root_device): Use the regular expression
	's%.*\(/dev/[^ 	]*\).*%\1%' instead of
	's%.*\(/dev/[a-z0-9]*\).*%\1%'.
	(bootdir_device): Likewise.
	(grubdir_device): Likewise.
	
2000-10-10  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/start.S (copy_buffer): Use pusha and popa instead of
	pushing and poping %di and %si individually, to reduce the code
	size and save %cx as well. Reported by Herbert Nachtnebel
	<nachtneb@iaee.tuwien.ac.at>.
	